# ransomeye.v1

./: .gitattributes  .gitignore  AUTOMATIC_FEED_FETCHER_SUMMARY.md  AUTO_SYNC_QUICKSTART.md  Cargo.toml  GITHUB_SETUP.md  MODULE_PHASE_MAP.md  MODULE_PHASE_MAP.yaml  OPERATIONAL_AUDIT_REPORT.json  OPERATIONAL_AUDIT_SUMMARY.md  PHANTOM_MODULE_ENFORCEMENT_REPORT.md  PHASE0.5_COMPLETE.md  PHASE10_VALIDATION_COMPLETE.md  PHASE11_AUDIT_REPORT.md  PHASE11_COMPLETE.md  PHASE12_AUDIT_REPORT.md  PHASE12_COMPLETE.md  PHASE1_AUDIT_REPORT.md  PHASE1_COMPLETE.md  PHASE3_ARTIFACT_BUILD_REPORT.md  PHASE3_AUDIT_REPORT.md  PHASE4_AUDIT_REPORT.md  PHASE5_AUDIT_REPORT.md  PHASE5_VALIDATION_REPORT.md  PHASE6_AUDIT_REPORT.md  PHASE6_BUILD_COMPLETE.md  PHASE6_COMPLETE_VALIDATION.md  PHASE6_FINAL_VALIDATION.md  PHASE6_FINAL_VALIDATION_SUMMARY.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_RESULT.md  PHASE6_VALIDATION_COMPLETE.md  PHASE6_VALIDATION_REPORT.md  PHASE7_AUDIT_REPORT.md  PHASE9_SENSORS_COMPLETE.md  PUSH_INSTRUCTIONS.md  QUICK_START_THREAT_FEEDS.md  README.md  ROOTLESS_RUNTIME_ENFORCEMENT_REPORT.md  SERVICE_BINARY_INTEGRITY_REPORT.md  (+17 more)
core/ai/: Cargo.toml  PHASE8_COMPLETION_SUMMARY.md
core/bus/: Cargo.toml
core/deception/: Cargo.toml
core/dispatch/: BUILD_COMPLETE.md  BUILD_SUMMARY.md  Cargo.toml  README.md
core/forensics/: Cargo.toml
core/governor/: Cargo.toml
core/guardrails/: Cargo.toml  PHASE0_COMPLETE.md  README.md  add_guardrails_to_systemd.sh  guardrails.yaml  guardrails.yaml.sig  sign_guardrails.sh
core/ingest/: Cargo.toml  README.md
core/intel/: Cargo.toml
core/network_scanner/: Cargo.toml  PHASE9_COMPLETE.md  README.md
core/response_playbooks/: Cargo.toml  PHASE6_COMPLETE.md  README.md
core/threat_feed/: Cargo.toml
edge/agent/: Cargo.toml
edge/dpi/: Cargo.toml  PHASE9A_COMPLETION_SUMMARY.md
edge/sentinel/: Cargo.toml
governance/tools/: Cargo.toml
ops/tuner/: Cargo.toml  PHASE11_VERIFICATION.md  README.md
qa/lifecycle/: Cargo.toml
qa/validation/: Cargo.toml  README.md
ransomeye_ai_advisory/: Cargo.toml  PHASE8_BUILD_SUMMARY.md  README.md
ransomeye_ai_advisory/config/: mod.rs  validation.rs
ransomeye_ai_advisory/docs/: advisory_boundary.md  advisory_scope.md  explainability_contract.md  failure_modes.md  model_governance.md
ransomeye_ai_advisory/explainability/: Cargo.toml
ransomeye_ai_advisory/inference/: Cargo.toml  mod.rs
ransomeye_ai_advisory/rag/: Cargo.toml  mod.rs
ransomeye_ai_advisory/security/: mod.rs  trust_chain.rs
ransomeye_ai_advisory/shap/: schema.json
ransomeye_ai_advisory/src/: context.rs  lib.rs  main.rs
ransomeye_ai_advisory/tests/: advisory_boundary_tests.rs  ai_disable_on_failure_tests.rs  determinism_tests.rs  explainability_consistency_tests.rs  inference_advisory_only_tests.rs  model_signature_tests.rs  rag_integrity_tests.rs  shap_required_tests.rs
ransomeye_architecture/tests/: Cargo.toml  ai_authority_violation_tests.rs  forbidden_flow_tests.rs  identity_violation_tests.rs  plane_isolation_tests.rs
ransomeye_core/: Cargo.toml  PHASE5_COMPILATION_FIX.md  PHASE5_REBUILD_SUMMARY.md  PHASE5_VALIDATION_REPORT.md
ransomeye_core/docs/: failure_modes.md
ransomeye_dispatcher/: Cargo.toml
ransomeye_dispatcher/config/: mod.rs  validation.rs
ransomeye_dispatcher/docs/: execution_guarantees.md  failure_modes.md  rollback_model.md
ransomeye_dispatcher/security/: mod.rs  replay_protection.rs
ransomeye_dispatcher/src/: lib.rs  protocol.rs
ransomeye_dispatcher/targets/: linux_agent.rs  mod.rs
ransomeye_dispatcher/tests/: directive_validation_tests.rs  dry_run_equivalence_tests.rs  fail_safe_tests.rs  loop_prevention_tests.rs  misrouting_tests.rs  replay_attack_tests.rs  timeout_tests.rs
ransomeye_dpi_probe/: Cargo.toml  README.md
ransomeye_dpi_probe/docs/: backpressure_behavior.md  capture_model.md  dpi_architecture.md  failure_modes.md  performance_model.md  privacy_guarantees.md
ransomeye_dpi_probe/installer/: install.sh  requirements.md  uninstall.sh  verify.sh
ransomeye_dpi_probe/protocol/: compatibility.md
ransomeye_dpi_probe/security/: identity.rs
ransomeye_dpi_probe/src/: buffer.rs  config.rs  feature.rs  flow.rs  transport.rs
ransomeye_dpi_probe/systemd/: ransomeye-dpi-probe.service
ransomeye_dpi_probe/tests/: backpressure_tests.rs  core_unavailable_tests.rs  flow_eviction_tests.rs  integration_tests.rs  parser_tests.rs
ransomeye_intelligence/tests/: Cargo.toml  baseline_presence_tests.rs  intel_poisoning_tests.rs  llm_index_integrity_tests.rs  shap_completeness_tests.rs  signature_failure_tests.rs
ransomeye_linux_agent/: Cargo.toml  PHASE9B_COMPLETION_SUMMARY.md  README.md
ransomeye_linux_agent/config/: validation.rs
ransomeye_linux_agent/docs/: failure_modes.md  performance_model.md
ransomeye_linux_agent/ebpf/: loader.rs
ransomeye_linux_agent/installer/: requirements.md  uninstall.sh  verify.sh
ransomeye_linux_agent/protocol/: compatibility.md  linux_event_schema.json
ransomeye_linux_agent/security/: replay_protection.rs
ransomeye_linux_agent/src/: buffer.rs  config.rs  event.rs  identity.rs  lib.rs  main.rs  network_activity.rs  telemetry.rs
ransomeye_linux_agent/systemd/: ransomeye-linux-agent.service
ransomeye_linux_agent/tests/: determinism_tests.rs  fs_behavior_tests.rs  process_tests.rs  signing_tests.rs  syscall_tests.rs
ransomeye_policy/: Cargo.toml  README.md
ransomeye_policy/language/: grammar.md  semantics.md
ransomeye_policy/output/: directive.rs  mod.rs
ransomeye_policy/policies/: lateral_movement.yaml  persistence.yaml  privilege_abuse.yaml  ransomware_response.yaml
ransomeye_policy/schema/: directive_schema.json
ransomeye_policy/security/: mod.rs  revocation.rs  sign_policy.rs  signature.rs
ransomeye_policy/src/: context.rs  decision.rs  engine.rs  errors.rs  evaluator.rs  lib.rs  main.rs  matcher.rs  output.rs  policy.rs
ransomeye_validation/: Cargo.toml  README.md  RELEASE_GATE_IMPLEMENTATION.md
ransomeye_windows_agent/: Cargo.toml  ETW_TO_ENVELOPE_EXAMPLE.md  PHASE9C_BUILD_COMPLETE.md  PHASE9C_FINAL_DELIVERABLES.md  README.md
(+1093 files in other folders)
