[package]
name = "ransomeye_dispatcher"
version = "1.0.0"
edition = "2021"

[lib]
name = "ransomeye_dispatcher"
path = "dispatcher/src/lib.rs"

[[bin]]
name = "ransomeye_dispatcher"
path = "dispatcher/src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ring = "0.17"
base64 = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
hex = "0.4"
rustls = "0.21"
rustls-pemfile = "1.0"
x509-parser = "0.16"
asn1-rs = "0.6"
reqwest = { version = "0.11", features = ["rustls-tls"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

