[package]
name = "ransomeye_linux_agent"
version = "0.1.0"
edition = "2021"
authors = ["nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU"]
description = "RansomEye Linux Agent - Host-based telemetry sensor (standalone)"

[[bin]]
name = "ransomeye_linux_agent"
path = "agent/src/main.rs"

[lib]
name = "ransomeye_linux_agent"
path = "agent/src/lib.rs"

[dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1.0"
chrono = "0.4"
hostname = "0.4"
libc = "0.2"
nix = "0.27"
audit = "0.6"
bpf-sys = "0.3"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
