[package]
name = "ransomeye_policy"
version = "1.0.0"
edition = "2021"

[lib]
path = "engine/src/lib.rs"

[[bin]]
name = "ransomeye_policy"
path = "engine/src/main.rs"

[[bin]]
name = "sign_policies"
path = "tools/sign_policies.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ring = "0.17"
base64 = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
