[package]
name = "ransomeye_validation"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
ring = "0.17"
ed25519-dalek = "2.0"
parking_lot = "0.12"
dashmap = "5.0"
crossbeam-channel = "0.5"
once_cell = "1.19"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
rusqlite = "0.30"
postgres = "0.19"
tokio-stream = "0.1"
bytes = "1.5"
regex = "1.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
proptest = "1.4"

[lib]
name = "ransomeye_validation"
path = "src/lib.rs"

[[bin]]
name = "ransomeye_validator"
path = "src/main.rs"

[[bin]]
name = "chaos"
path = "tools/chaos.rs"

[[bin]]
name = "replay"
path = "tools/replay.rs"

[[bin]]
name = "verifier"
path = "tools/verifier.rs"

[[bin]]
name = "auditor"
path = "tools/auditor.rs"

