[package]
name = "ransomeye_windows_agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.21"
rustls-pemfile = "1.0"
ring = "0.17"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
base64 = "0.21"
hex = "0.4"
once_cell = "1.19"
tokio-rustls = "0.24"
url = "2.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "securitybaseapi", "winnls", "winreg", "winuser"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "ransomeye_windows_agent"
path = "src/main.rs"

