# Path and File Name : /home/ransomeye/rebuild/ransomeye_windows_agent/Cargo.toml
# Author: nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU
# Details of functionality of this file: Cargo manifest for Windows Agent - standalone telemetry sensor

[package]
name = "ransomeye_windows_agent"
version = "0.1.0"
edition = "2021"
authors = ["nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU"]
description = "RansomEye Windows Agent - Standalone host-based telemetry sensor (Phase 9C)"

[[bin]]
name = "ransomeye_windows_agent"
path = "agent/src/main.rs"

[lib]
name = "ransomeye_windows_agent"
path = "agent/src/lib.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography - Ed25519 signing
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "securitybaseapi", "winnls", "winreg", "winuser", "tlhelp32", "fileapi", "handleapi", "iphlpapi", "ws2def", "winsock2", "winerror", "minwinbase", "winnt", "evntrace", "evntprov"] }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Diagnostics_Etw", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_System_IO", "Win32_Networking_WinSock"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockall = "0.12"
hostname = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
