[package]
name = "bus"
version = "1.0.0"
edition = "2021"

[lib]
name = "bus"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
base64 = "0.22"
sha2 = "0.10"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
