# Path and File Name : /home/ransomeye/rebuild/core/deception/Cargo.toml
# Author: nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU
# Details of functionality of this file: Cargo.toml for Phase 16 - Deception Framework crate

[package]
name = "ransomeye_deception"
version = "1.0.0"
edition = "2021"
authors = ["RansomEye Team"]
license = "PROPRIETARY"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = "2.1"
base64 = "0.22"
ipnetwork = "0.20"

[dev-dependencies]
tokio-test = "0.4"

