[package]
name = "forensics"
version = "1.0.0"
edition = "2021"

[lib]
name = "forensics"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
ed25519-dalek = "2.1"
rand = { version = "0.8", features = ["std"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
