[package]
name = "ingest"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.21"
rustls-pemfile = "1.0"
ring = "0.17"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
x509-parser = "0.16"
base64 = "0.21"
asn1-rs = "0.6"
hex = "0.4"
jsonschema = "0.17"
url = "2.4"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tokio-test = "0.4"

[lib]
name = "ingest"
path = "src/lib.rs"

[[bin]]
name = "ingest"
path = "src/main.rs"

