[package]
name = "agent"
version = "1.0.0"
edition = "2021"

[lib]
name = "agent"
path = "src/lib.rs"

[target.'cfg(target_os = "linux")'.dependencies]
agent-linux = { path = "linux" }

[target.'cfg(target_os = "windows")'.dependencies]
agent-windows = { path = "windows" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

