[package]
name = "dpi"
version = "0.1.0"
edition = "2021"
authors = ["nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU"]
description = "RansomEye DPI Probe - High-throughput network telemetry sensor (standalone)"

[[bin]]
name = "dpi"
path = "probe/src/main.rs"

[lib]
name = "dpi"
path = "probe/src/lib.rs"

[dependencies]
pcap = "1.1"
pnet = "0.35"
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1.0"
chrono = "0.4"
crossbeam = "0.8"
hostname = "0.4"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

