[package]
name = "sentinel"
version = "1.0.0"
edition = "2021"
authors = ["nXxBku0CKFAJCBN3X1g3bQk7OxYQylg8CMw1iGsq7gU"]
description = "RansomEye Sentinel - Runtime integrity monitor for Agent and DPI"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[lib]
name = "sentinel"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
