[package]
name = "tuner"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ring = "0.17"
base64 = { version = "0.21", features = ["alloc"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.30"
dirs = "5.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
mockall = "0.12"

[[bin]]
name = "tuner"
path = "src/main.rs"

