[package]
name = "lifecycle"
version = "1.0.0"
edition = "2021"

[lib]
name = "lifecycle"
path = "src/lib.rs"

[[bin]]
name = "ransomeye_lifecycle_validator"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "1.0"
chrono = { workspace = true }

